; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ti/wl1251/extr_main.c_wl1251_fw_wakeup.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ti/wl1251/extr_main.c_wl1251_fw_wakeup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl1251 = type { i32 }

@ELPCTRL_WAKE_UP = common dso_local global i32 0, align 4
@HW_ACCESS_ELP_CTRL_REG_ADDR = common dso_local global i32 0, align 4
@ELPCTRL_WLAN_READY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"WLAN not ready\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wl1251*)* @wl1251_fw_wakeup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wl1251_fw_wakeup(%struct.wl1251* %0) #0 {
  %2 = alloca %struct.wl1251*, align 8
  %3 = alloca i32, align 4
  store %struct.wl1251* %0, %struct.wl1251** %2, align 8
  %4 = load i32, i32* @ELPCTRL_WAKE_UP, align 4
  store i32 %4, i32* %3, align 4
  %5 = load %struct.wl1251*, %struct.wl1251** %2, align 8
  %6 = load i32, i32* @HW_ACCESS_ELP_CTRL_REG_ADDR, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @wl1251_write_elp(%struct.wl1251* %5, i32 %6, i32 %7)
  %9 = load %struct.wl1251*, %struct.wl1251** %2, align 8
  %10 = load i32, i32* @HW_ACCESS_ELP_CTRL_REG_ADDR, align 4
  %11 = call i32 @wl1251_read_elp(%struct.wl1251* %9, i32 %10)
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @ELPCTRL_WLAN_READY, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %18, label %16

16:                                               ; preds = %1
  %17 = call i32 @wl1251_warning(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  br label %18

18:                                               ; preds = %16, %1
  ret void
}

declare dso_local i32 @wl1251_write_elp(%struct.wl1251*, i32, i32) #1

declare dso_local i32 @wl1251_read_elp(%struct.wl1251*, i32) #1

declare dso_local i32 @wl1251_warning(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
